@@ -89,12 +89,10 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.13.0</version>
 				<configuration>
-					<source>17</source> <!-- depending on your project -->
-					<target>17</target> <!-- depending on your project -->
+					<source>22</source> <!-- depending on your project -->
+					<target>22</target> <!-- depending on your project -->
 					<showDeprecation>false</showDeprecation>
-					<compilerArgs>
-						<arg>-parameters</arg>
-						<!--<arg>-verbose</arg>-->
+					<compilerArgs>--enable-preview
 						<!-- <arg>-enable-preview</arg> -->
 						<arg>-Xlint</arg>
 						<compilerArg>
